# seevideo-tauri

./: README.md  activation_code.txt  sample_accounts.csv
.github/workflows/: release.yml
.hermes/plans/: 2026-04-19_120505-hide-auth-worker-selection-persistence.md
keys/: README.md  license_priv.pem  license_pub.pem
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: inject.js  license.rs  main.rs  store.rs
tests/: test_github_release_workflow.py
tools/: generate_activation_code.js
web/: index.html  panel.html  panel.js
