[package]
name = "seevideo"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["shell-all", "window-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
aes-gcm = "0.10"
rand = "0.8"
rsa = { version = "0.9", features = ["pem"] }
sha2 = "0.10"
dirs = "5"
anyhow = "1"

[dev-dependencies]
tempfile = "3"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
